# aliyunctf-2024-challenges-public

./: LICENSE
-enotyourworld/: .gitignore  Makefile  chal.py  flag  genpoly.py  lang.py  main.c  params.py  stub.py  tests.py
mi/: .gitignore  Dockerfile  pyproject.toml
mi/mi/: __main__.py
mi/tools/: better_tracr_compiling.py  build.py  gen.py  miprim.py
rdtma/: .gitignore  Makefile  check_type.h  common.h  compile_flags.txt  container_of.h  driver.h  genprog.py  rdtm.cc  rdtm.h  rxe.h  rxe_queue.h  weak-magic.inl  weak.cc
