[tool.poetry]
name = "mi"
version = "0.1.0"
description = ""
authors = ["Riatre Foo <foo@riat.re>"]

[tool.poetry.dependencies]
python = "^3.11"
tracr = {git = "https://github.com/google-deepmind/tracr.git", rev = "9ce2b8c82b6ba10e62e86cf6f390e7536d4fd2cd"}
zstandard = "^0.22.0"
shiv = "^1.0.5"


[tool.poetry.group.dev.dependencies]
shiv = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
